--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,9 @@
 html,
 body {
   padding: 0;
+  background-color: black;
   margin: 0;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +15,95 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.main{
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+.input{
+  border-radius: 10px;
+  height: 50px;
+  width: 250px;
+  background-color: whitesmoke;
+  outline: none;
+}
+.input:active{
+  z-index: 3;
+  border-color:aquamarine;
+}
+.input:hover{
+  z-index: 4;
+  border-color:aquamarine;
+}
+.inputChat{
+  border-radius: 10px;
+  height: 50px;
+  width: 550px;
+  background-color: whitesmoke;
+  outline: none;
+}
+.enterbutton{
+  background-color: transparent;
+  border-radius:10px;
+  border-color: whitesmoke;
+  height:50px;
+  width:auto;
+  color:white;
+
+  margin-left:10px
+}
+.enterbutton:hover{
+  background-color: aquamarine;
+  color:black;
+  border-color:aquamarine;
+
+
+}
+.row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.room{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.leftnav{
+  position: fixed;
+  width: 30vw;
+  height: 100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content: space-between;
+}
+.rightchat{
+  display: flex;
+  flex-direction: column;
+  margin-left:300px;
+
+}
+.chatinput{
+  position: fixed;
+  bottom:10px;
+  margin:3px;
+}
+@media (max-width:600px){
+  .leftnav{
+    display: none;
+
+  }
+  .room{
+    flex-direction: column;
+
+  }
+  .rightchat{
+    margin-left: 0px;
+  }
+
 }
